// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";

package metanotes.api;

message Version {
  string version_id = 1;
  string text_body = 2;
  map<string, string> meta = 3;
}

message Scribble {
  string scribble_id = 1;
  repeated Version version = 2;
}

message GetScribbleRequest {
  string scribble_id = 1;
  repeated string version_id = 2;
}

message GetScribbleReply {
  Scribble scribble = 1;
}

message GetAllMetadataReply {
  repeated Scribble scribble = 1;
}

service Metanotes {
  rpc GetScribble(GetScribbleRequest) returns (GetScribbleReply) {}

  rpc GetAllMetadata(google.protobuf.Empty) returns (GetAllMetadataReply) {}
}
